Bug 34608 - contrast mode  accordion icon issue fix done

--- a/css/main-1.css
+++ b/css/main-1.css
@@ -6411,4 +6411,11 @@ agendas-container agendas-item agendas-published {
     .alert .alert-close svg {
         fill: aliceblue;
     }
+    .step-accordion .accordion-item .accordion-button:not(.collapsed)::after {
+        background-image: url("../assets/img/web-icons/Accordion-expand-contrast-mode.svg") !important;
+    }
+
+    .step-accordion .accordion-item .accordion-button::after { 
+        background-image: url("../assets/img/web-icons/Accordion-contract-contrast-mode.svg") !important;
+    }
   }
